<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:elevation="8dp"
    android:id="@+id/rowLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    app:cardUseCompatPadding="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/hrCoverImage"
        android:layout_width="96dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/hrLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/hrCheckBox"
        android:layout_toRightOf="@+id/hrCoverImage"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:padding="8dp" >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/hrTitleText"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/anime"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/hrEpisodeTitleText"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="start"
            android:text="@string/episode" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/hrHistoryText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="Last Watched" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/hrCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_centerVertical="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>