<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit">

            <ImageView
                android:id="@+id/headerImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/anime_header_thumbnail_height"
                android:scaleType="fitCenter" />
        </FrameLayout>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:ellipsize="middle"
            android:textSize="@dimen/typography_headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:text="@string/summary"
            android:textSize="@dimen/typography_subhead"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:textSize="@dimen/typography_body_1" />

        <TextView
            android:id="@+id/authorTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:text="@string/authors"
            android:textColor="@color/material_blue_primary"
            android:textSize="@dimen/typography_subhead"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:textSize="@dimen/typography_body_1" />

        <TextView
            android:id="@+id/aliasTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:text="@string/alternate_names"
            android:textColor="@color/material_blue_primary"
            android:textSize="@dimen/typography_subhead"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aliasTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:textSize="@dimen/typography_body_1" />

        <TextView
            android:id="@+id/genreTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:text="@string/genres"
            android:textColor="@color/material_blue_primary"
            android:textSize="@dimen/typography_subhead"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:textSize="@dimen/typography_body_1" />

        <TextView
            android:id="@+id/statusTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:text="@string/status"
            android:textColor="@color/material_blue_primary"
            android:textSize="@dimen/typography_subhead"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/baseline_component_unit"
            android:layout_marginEnd="@dimen/baseline_content_unit"
            android:layout_marginLeft="@dimen/baseline_content_left"
            android:layout_marginRight="@dimen/baseline_content_unit"
            android:layout_marginStart="@dimen/baseline_content_left"
            android:textSize="@dimen/typography_body_1" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/fab_button"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="top|start"
        android:layout_marginLeft="@dimen/anime_header_fab_margin_left"
        android:layout_marginStart="@dimen/anime_header_fab_margin_left"
        android:layout_marginTop="@dimen/anime_header_fab_margin_top"
        android:background="@drawable/button_round"
        app:elevation="8dp"
        android:padding="14dp"
        android:scaleType="fitCenter"
        android:stateListAnimator="@animator/fab_anim"
        android:transitionName="fab" />

</FrameLayout>